{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 44,
  "lineage": "824b870b-26c5-1701-b014-6ab4b523b190",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_elastica_webServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3acc44a18d607ac",
            "arn": "arn:aws:ec2:us-east-1:851725258399:elastic-ip/eipalloc-0f3acc44a18d607ac",
            "association_id": "eipassoc-0083d0f45e3577bb0",
            "domain": "vpc",
            "id": "eipalloc-0f3acc44a18d607ac",
            "instance": "i-0ee7429dc00f7d39e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f1cffcda82c6a3c4",
            "private_dns": "ip-172-31-26-169.ec2.internal",
            "private_ip": "172.31.26.169",
            "public_dns": "ec2-44-218-104-20.compute-1.amazonaws.com",
            "public_ip": "44.218.104.20",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.WebServer-ex",
            "aws_security_group.WebServer-ex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:851725258399:instance/i-06c259e60fafdfd49",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c259e60fafdfd49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07bd420b7668983e3"
              }
            ],
            "primary_network_interface_id": "eni-07bd420b7668983e3",
            "private_dns": "ip-172-31-16-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.12",
            "public_dns": "ec2-3-82-46-35.compute-1.amazonaws.com",
            "public_ip": "3.82.46.35",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a470d3d46127398",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "grupo_Bastion"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a071ef02ad004452",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afa566de600fd3f8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "i-06c259e60fafdfd49",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer-ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:851725258399:instance/i-0ee7429dc00f7d39e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee7429dc00f7d39e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f1cffcda82c6a3c4"
              }
            ],
            "primary_network_interface_id": "eni-0f1cffcda82c6a3c4",
            "private_dns": "ip-172-31-26-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.169",
            "public_dns": "ec2-54-226-232-41.compute-1.amazonaws.com",
            "public_ip": "54.226.232.41",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c55caefe5d46117",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "grupo_WebServer-ex"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a071ef02ad004452",
            "tags": {
              "Name": "WebServer-ex"
            },
            "tags_all": {
              "Name": "WebServer-ex"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0e41c3885c83bf59e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "i-0ee7429dc00f7d39e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.WebServer-ex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group/sg-0afa566de600fd3f8",
            "description": "SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afa566de600fd3f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grupo_Bastion",
            "name_prefix": "",
            "owner_id": "851725258399",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo_Bastion"
            },
            "tags_all": {
              "Name": "grupo_Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-010d294594a20c7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sg-0afa566de600fd3f8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer-ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group/sg-0e41c3885c83bf59e",
            "description": "Permitir HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e41c3885c83bf59e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afa566de600fd3f8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grupo_WebServer-ex",
            "name_prefix": "",
            "owner_id": "851725258399",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo_WebServer-ex"
            },
            "tags_all": {
              "Name": "grupo_WebServer-ex"
            },
            "timeouts": null,
            "vpc_id": "vpc-010d294594a20c7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sg-0e41c3885c83bf59e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-0f2615bc340e5068d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f2615bc340e5068d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0afa566de600fd3f8",
            "security_group_rule_id": "sgr-0f2615bc340e5068d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-0f2615bc340e5068d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-04ccbe4d4137fbcff",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04ccbe4d4137fbcff",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e41c3885c83bf59e",
            "security_group_rule_id": "sgr-04ccbe4d4137fbcff",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-04ccbe4d4137fbcff",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.WebServer-ex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Bastion_allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-06597379e70586221",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06597379e70586221",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0afa566de600fd3f8",
            "security_group_rule_id": "sgr-06597379e70586221",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-06597379e70586221",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "WebServer-ex_allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-078f7baefcd1c1a00",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-078f7baefcd1c1a00",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e41c3885c83bf59e",
            "security_group_rule_id": "sgr-078f7baefcd1c1a00",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-078f7baefcd1c1a00",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.WebServer-ex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "entrada_ssh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-0f064badfcb77374b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f064badfcb77374b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0afa566de600fd3f8",
            "region": "us-east-1",
            "security_group_id": "sg-0e41c3885c83bf59e",
            "security_group_rule_id": "sgr-0f064badfcb77374b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-0f064badfcb77374b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion",
            "aws_security_group.WebServer-ex"
          ]
        }
      ]
    }
  ]
}